--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@portabletext/react": "^5.0.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.18.0",
     "@tailwindcss/postcss": "^4.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
+    "next-sanity": "^11.6.8",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "sanity": "^4.18.0",
     "stripe": "^17.7.0",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.13",
     "tailwindcss-animate": "^1.0.7",
