--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
-    "next": "15.2.2",
+    "next": "^16.0.7",
     "next-sanity": "^11.6.8",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "sanity": "^4.18.0",
     "stripe": "^17.7.0",
