--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@portabletext/react": "^5.0.0",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.18.0",
     "@tailwindcss/postcss": "^4.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.479.0",
     "next": "^15.5.7",
     "next-sanity": "^11.6.8",
     "postcss": "^8.5.3",
     "react": "^19.0.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.3",
     "react-icons": "^5.5.0",
     "sanity": "^4.18.0",
