--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.0.3",
     "react-icons": "^5.5.0",
     "sanity": "^4.18.0",
+    "square": "^43.2.1",
     "stripe": "^17.7.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.0.2",
