--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.3",
     "react-icons": "^5.5.0",
+    "resend": "^6.6.0",
     "sanity": "^4.18.0",
     "square": "^43.2.1",
     "stripe": "^17.7.0",
