--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@sanity/dashboard": "^5.0.1",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.18.0",
     "@tailwindcss/postcss": "^4.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.479.0",
     "next": "^15.5.7",
     "next-sanity": "^11.6.8",
@@ -32,6 +34,7 @@
     "react-icons": "^5.5.0",
     "resend": "^6.6.0",
     "sanity": "^4.18.0",
+    "slugify": "^1.6.6",
     "square": "^43.2.1",
     "stripe": "^17.7.0",
     "styled-components": "^6.1.19",
